--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,22 @@
 /* styles */
 /* called by your view template */
 
-/* You might want to try something fancier: */
-/* less: http://lesscss.org/ */
+body {
+	font-family: Helvetica, Arial;
+}
+
+h1 {
+	font-size: 2em;
+}
+
+h2 {
+	font-size: 1.2em;
+}
+
+.example-list {
+	list-style-type: none;
+}
+
+.example {
+	margin: 0 0 0 7em;
+}
