--- a/views/index.html
+++ b/views/index.html
@@ -16,40 +16,50 @@
 
   <body>
   	<!-- navbar at the top -->
-  	<header id="top-navbar" role="banner" class="navbar fixed-top">
-  		<div class="row">
-	  		<div id="nav" 
-          class="nav nav-pills fill justify-content-end col-md-12"
-        >
-		  		<a id="about-nav"
-            href="#about" 
-            class="nav-link page-nav active">About</a>
+  	<nav id="top-navbar" role="banner" class="navbar navbar-default navbar-toggleable fixed-top">
+      <a class="navbar-brand" href="/">vrizaldi</a>
 
-		  		<a id="portofolio-nav" 
-            href="#portofolio" 
-            class="nav-link page-nav">Portofolio</a>
+      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#nav">
+        <i class="fa fa-toggle-down fa-1x"></i>
+      </button>
 
-		  		<a id="contact-nav" 
-            href="#contact" 
-            class="nav-link page-nav">Contact</a>
-	  		</div>
+  		<div id="nav" 
+        class="collapse navbar-collapse justify-content-end"
+      >
+        <ul class="navbar-nav">
+          <li id="about-nav" class="page-nav active">
+        		<a href="#about" 
+              class="nav-link">About</a>
+          </li>
+
+          <li id="portofolio-nav" class="page-nav">
+        		<a  
+              href="#portofolio" 
+              class="nav-link">Portofolio</a>
+          </li>
+
+          <li id="contact-nav" class="page-nav">
+        		<a href="#contact" 
+              class="nav-link">Contact</a>
+          </li>
+        </ul>
   		</div>
-  	</header>
+  	</nav>
 
   	<!-- content -->
   	<div class="container-fluid">
-  		<div id="about" class="section">
+  		<div id="about-sec" class="section">
 	  		<h1 id="name">Verdy Noorghifari<h1>
 	  		<h3 id="username">vrizaldi</h3>
 	  		<p>
-		  		A self taught developer who is passionate about Web, Mobile app and open source development; I am eager to learn as more tools are becoming available.
+		  		A self taught developer who is passionate about Web, Mobile app and open source development; I am eager to learn as more technologies are becoming available.
 		  	</p>
   		</div>
 
-  		<div id="portofolio" class="section">
+  		<div id="portofolio-sec" class="section">
   			<h1>&lt;Projects /&gt;</h1>
   			<p>
-	  			These are the projects that I have done, all open source and available online - you can use them as reference whenever you want. Most of them are stored in Github and I use other websites to host the web page and server: Codepen (for front-end), Heroku and Glitch.com (for full-stack development or API projects)
+	  			These are some of the side projects that I have done, all open source and available online - you can use them as reference whenever you want. Most of them are stored in Github and I use other websites to host the web page and server: Codepen (for front-end), Heroku and Glitch.com (for full-stack development or API projects)
   			</p>
 
   			<div id="projects-wrapper">
@@ -58,17 +68,17 @@
 
   		</div>
 
-  		<div id="contact" class="section">
+  		<div id="contact-sec" class="section">
   			<h1>&lt;Contact /&gt;</h1>
   			<p>
-  				If you have any business query, want to consult with me or have a suggestion how I could improve this website, please contact me through email - I am very open to opportunity and suggestion.
+  				If you have any business query, want to consult with me or have a any idea on how I could improve this website, please contact me through email - I am very open to opportunity and suggestion.
   			</p>
 
   			<div id="contact-form" class="form-group">
           <div class="form-group">        
-    				<label for="name">Name</label>
+    				<label for="full-name">Name</label>
   	  			<input id="full-name" 
-  	  				class="form-control" 
+  	  				class="form-control contact-field" 
   	  				placeholder="Your full name here"
   	  				data-toggle="tooltip"
   	  				data-placement="right"
@@ -78,24 +88,34 @@
           <div class="form-group">
     				<label for="email">Email</label>
   	  			<input id="email" 
-  	  				class="form-control" 
+  	  				class="form-control contact-field" 
               type="email"
   	  				placeholder="e.g. yourname@someprovider.com"
   	  				data-toggle="tooltip"
   	  				data-placement="right"
   	  				title="Tell me where I should send the response"
             >	 
+          </div>
+          <div class="form-group">        
+            <label for="subject">Subject</label>
+            <input id="subject" 
+              class="form-control contact-field" 
+              placeholder="The subject of the message"
+              data-toggle="tooltip"
+              data-placement="right"
+              title="What are we going discussing?"
+            >         
           </div> 			
           <div class="form-group">
     				<label for="message">Message</label>
   	  			<textarea id="message" 
-  	  				class="form-control"
+  	  				class="form-control contact-field"
   	  			  placeholder="Enter your message here! :)"
               data-toggle="tooltip"
               data-placement="right"
               title="What do you have to say?" 
             ></textarea>
-            <a id="contact-form-submit" class="btn btn-primary" href="" target="blank">Send!</a>  
+            <a id="contact-form-submit" class="btn btn-primary" href="mailto:vrizaldi@gmail.com" target="blank">Send!</a>  
           </div>
         </div>
   		</div>
