Fixed typo (no closing tag on main)

--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
   	</nav>
 
   	<!-- content -->
-  	<div class="container-fluid">
+  	<main class="container-fluid">
   		<div id="about-sec" class="section">
 	  		<h1 id="name">Verdy Noorghifari<h1>
 	  		<h3 id="username">vrizaldi</h3>
