Fonts changed + all links added

--- a/public/index.css
+++ b/public/index.css
@@ -5,7 +5,8 @@
 body {
 	margin: 0;
 	padding: 60px 0 0 0;
-	background-color: rgb(108, 45, 25);
+	background-color: #000;
+	font-family: 'Arvo';
 }
 
 .container-fluid {
@@ -24,12 +25,23 @@ body {
 	-o-box-shadow: 0 0px 5px 0px rgb(108, 107, 106);
 }
 
+.navbar-toggler {
+	background-color: rgb(255, 99, 71);
+	color: #fff;	
+	border-radius: 2px;
+}
+
 .page-nav.active {
 	color: #000;
 	background-color: #fff;
 	border: 1px solid #fff;
 	border-top-color: rgb(255, 99, 71);
 	border-bottom-color: rgb(161, 186, 245);
+}
+
+.navbar-brand, .title, .page-nav {
+	font-family: "Josefin Slab", cursive;
+	text-transform: uppercase;
 }
 
 /* sections */
@@ -41,17 +53,37 @@ body {
 
 /* about section */
 #about-sec {
-	background-color: rgb(255, 99, 71);
-	text-align: center;
-	padding: 5em 2em 2em 2em;
+	background-color: #000;
+	text-align: start;
+	padding: 9em 2em 2em 2em;
 	color: #fff;
+	border-bottom-color: rgb(255, 99, 71);
+}
+
+/* skills section */
+#skills-wrapper {
+	background-color: rgb(255, 99, 71);
 	border-bottom-color: #fff;
+}
+
+#skills {
+	list-style: none;
+	display: flex;
+	justify-content: center;
+	flex: 0 0 20%;
+	flex-wrap: wrap;
+}
+
+#skills li {
+	font-size: 1.5em;
+	margin: 10px;
 }
 
 /* portofolio section */
 #portofolio-sec {
 	background-color: #fff;
 	border-bottom-color: rgb(161, 186, 245);
+	padding-bottom: 1em;
 }
 
 #grid-sizer {
@@ -122,6 +154,13 @@ body {
 	background-color: #000;
 }
 
-#name {
-	font-weight: bold;
+#soc-med {
+	list-style: none;
+	display: flex;
+	font-size: 2em;
+	justify-content: flex-end;
+}
+
+#soc-med li {
+	margin: 5px;
 }
