saved masonry locally

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 	-->
     <meta charset="utf-8">
 
-    <link href="https://fonts.googleapis.com/css?family=Arvo|Josefin+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Josefin+Slab" rel="stylesheet"> 
     <link href="/bootstrap.min.css" rel="stylesheet">
     <link href="/font-awesome.min.css" rel="stylesheet">
 		<link href="/index.css" rel="stylesheet">
@@ -156,7 +156,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="/tether.min.js"></script>
     <script src="/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="/masonry.pkgd.min.js"></script>
     <script src="/client.js"></script>
   </body>
 </html>
