saved jquery locally

--- a/views/index.html
+++ b/views/index.html
@@ -153,7 +153,7 @@
   		</footer>
   	</main>
 
-    <script src="/jquery.min.js"></script>
+    <script src="/jquery-3.2.1.min.js"></script>
     <script src="/tether.min.js"></script>
     <script src="/bootstrap.min.js"></script>
     <script src="/masonry.pkgd.min.js"></script>
