--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,8 @@
 	-->
     <meta charset="utf-8">
 
-    <link href="https://fonts.googleapis.com/css?family=Arvo|Josefin+Slab" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet"> 
     <link href="/bootstrap.min.css" rel="stylesheet">
     <link href="/font-awesome.min.css" rel="stylesheet">
 		<link href="/index.css" rel="stylesheet">
