viewport meta added

--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
 	-->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet"> 
