--- a/views/index.html
+++ b/views/index.html
@@ -158,6 +158,7 @@
     <script src="/jquery-3.2.1.min.js"></script>
     <script src="/tether.min.js"></script>
     <script src="/bootstrap.min.js"></script>
+    <script src="/imagesloaded.pkgd.min.js"></script><
     <script src="/masonry.pkgd.min.js"></script>
     <script src="/client.js"></script>
   </body>
