Fixed some typos

--- a/views/index.html
+++ b/views/index.html
@@ -88,7 +88,7 @@
   		<div id="contact-sec" class="section">
   			<h1 class="title">&lt;Contact /&gt;</h1>
   			<p>
-  				If you have any business query, want to consult with me or have a any idea on how I could improve this website, please contact me through email - I am very open to opportunity and suggestion.
+  				If you have any business query, want to consult with me or have any idea on how I could improve this website, please contact me through email - I am very open to opportunity and suggestion.
   			</p>
 
   			<div id="contact-form" class="form-group">
